--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 
  <!-- navigation code here -->
+  <h1>SpaceWalkers</h1>
   <nav>
     <a href="#">Home</a>
     <a href="#">About Us</a>
