--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
 
  <!-- navigation code here -->
-  <h1>SpaceWalkers</h1>
+  <div class="h1-nav"><h1>SpaceWalkers</h1>
   <nav>
-    <a href="#">Home</a>
-    <a href="#">About Us</a>
-    <a href="#">Blog</a>
-    <a href="#">Contact</a>
-    <a href="#">Sign In</a>
-  </nav>
+  <a href="#">Home</a>
+  <a href="#">About Us</a>
+  <a href="#">Blog</a>
+  <a href="#">Contact</a>
+  <a href="#">Sign In</a>
+  </nav></div>
   <div class="container home">
 
     <header class="intro">
